--- a/index.html
+++ b/index.html
@@ -8,70 +8,70 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-      <div class="background-image">
-        <header>
-          <nav>
-            <ul>
-              <li><a href="#home">ホーム</a></li>
-            <li><a href="#about">私たちについて</a></li>
+  <div class="background-image">
+    <header>
+      <nav>
+        <ul>
+          <li><a href="#home">ホーム</a></li>
+          <li><a href="#about">私たちについて</a></li>
           <li><a href="#menu">メニュー</a></li>
-        <li><a href="#contact">お問い合わせ</a></li>
-      </ul>
-    </nav>
+          <li><a href="#contact">お問い合わせ</a></li>
+        </ul>
+      </nav>
     </header>
     <section id="home">
       <h1>Delicious Eatsへようこそ</h1>
-    <p>最高の料理とサービスを提供します。</p>
+      <p>最高の料理とサービスを提供します。</p>
     </section>
     <section id="about">
       <h2>私たちについて</h2>
-    <p>Delicious Eatsは、最高の料理とサービスを提供することを目指しています。</p>
-          <img src="about.jpg" alt="私たちについて">
-        </section>
-      <section id="menu">
-        <h2>メニュー</h2>
-          <div class="grid-container">
-            <div class="grid-item">
-              <img src="dish1.jpg" alt="Dish 1">
-            <p>料理1</p>
+      <p>Delicious Eatsは、最高の料理とサービスを提供することを目指しています。</p>
+      <img src="./image/chef.gif" alt="私たちについて" style="width: 10%;">
+    </section>
+    <section id="menu">
+      <h2>メニュー</h2>
+      <div class="grid-container">
+        <div class="grid-item">
+          <img src="./image/炒飯.jpg" alt="Dish 1">
+          <p>料理1</p>
           <button class="openModal" data-modal="modal1">詳細を見る</button>
         </div>
-      <div class="grid-item">
-        <img src="dish2.jpg" alt="Dish 2">
-      <p>料理2</p>
-    <button class="openModal" data-modal="modal2">詳細を見る</button>
-    </div>
-    <div class="grid-item">
-      <img src="dish3.jpg" alt="Dish 3">
-    <p>料理3</p>
-    <button class="openModal" data-modal="modal3">詳細を見る</button>
-    </div>
-    </div>
+        <div class="grid-item">
+          <img src="./image/餃子.jpg" alt="Dish 2">
+          <p>料理2</p>
+          <button class="openModal" data-modal="modal2">詳細を見る</button>
+        </div>
+        <div class="grid-item">
+          <img src="./image/麻婆豆腐.jpg" alt="Dish 3">
+          <p>料理3</p>
+          <button class="openModal" data-modal="modal3">詳細を見る</button>
+        </div>
+      </div>
     </section>
     <section id="contact">
       <h2>お問い合わせ</h2>
-    <p>ご質問やご予約はお気軽にお問い合わせください。</p>
+      <p>ご質問やご予約はお気軽にお問い合わせください。</p>
     </section>
-    </div>
+  </div>
     
-    <div id="modal1" class="modal">
-      <div class="modal-content">
-        <span class="close">&times;</span>
-        <p>料理1の詳細情報です。</p>
-      </div>
+  <div id="modal1" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <p>料理1の詳細情報です。</p>
     </div>
-    <div id="modal2" class="modal">
-      <div class="modal-content">
-        <span class="close">&times;</span>
-        <p>料理2の詳細情報です。</p>
-      </div>
+  </div>
+  <div id="modal2" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <p>料理2の詳細情報です。</p>
     </div>
-    <div id="modal3" class="modal">
-      <div class="modal-content">
-        <span class="close">&times;</span>
-        <p>料理3の詳細情報です。</p>
-      </div>
+  </div>
+  <div id="modal3" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <p>料理3の詳細情報です。</p>
     </div>
-    <script src="./script.js"></script>
+  </div>
+  <script src="./script.js"></script>
   </body>
 </html>
