--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </nav>
     </header>
     <section id="home">
-      <h1>Delicious Eatsへようこそ</h1>
+      <h1>松原飯店へようこそ</h1>
       <p>最高の料理とサービスを提供します。</p>
     </section>
     <section id="about">
@@ -33,45 +33,110 @@
       <div class="grid-container">
         <div class="grid-item">
           <img src="./image/炒飯.jpg" alt="Dish 1">
-          <p>料理1</p>
+          <p>炒飯</p>
           <button class="openModal" data-modal="modal1">詳細を見る</button>
         </div>
         <div class="grid-item">
           <img src="./image/餃子.jpg" alt="Dish 2">
-          <p>料理2</p>
+          <p>餃子</p>
           <button class="openModal" data-modal="modal2">詳細を見る</button>
         </div>
         <div class="grid-item">
           <img src="./image/麻婆豆腐.jpg" alt="Dish 3">
-          <p>料理3</p>
+          <p>麻婆豆腐</p>
           <button class="openModal" data-modal="modal3">詳細を見る</button>
         </div>
+        <div class="grid-item">
+          <img src="./image/担々麵.jpg" alt="Dish 4">
+          <p>担々麵</p>
+          <button class="openModal" data-modal="modal4">詳細を見る</button>
+        </div>
+        <div class="grid-item">
+          <img src="./image/青椒肉絲.jpg" alt="Dish 5">
+          <p>青椒肉絲</p>
+          <button class="openModal" data-modal="modal5">詳細を見る</button>
+        </div>
+        <div class="grid-item">
+          <img src="./image/杏仁豆腐.jpg" alt="Dish 6">
+          <p>杏仁豆腐</p>
+          <button class="openModal" data-modal="modal6">詳細を見る</button>
+        </div>
       </div>
+
     </section>
-    <section id="contact">
-      <h2>お問い合わせ</h2>
-      <p>ご質問やご予約はお気軽にお問い合わせください。</p>
-    </section>
+    <div class="grid-container-footer">
+      <section id="contact">
+        <h2>お問い合わせ</h2>
+        <p>ご質問やご予約はお気軽にお問い合わせください。</p>
+        <p>TEL:03-1234-5678</p>
+        <p>〒123-4567
+          東京都新宿区西新宿0-0-0</p>
+      </section>
+      <div class="grid-item-footer1">
+        <h1>松原飯店</h1>
+        <p>facebook・Twitter・Instagram</p>
+      </div>
+      <div class="grid-item-footer2">
+        <h2>サービス</h2>
+        <p>当日配送</p>
+        <p>関東全域</p>
+        <p>平日:11:00〜22:00</p>
+        <p>土日: 11:00〜24:00</p>
+      </div>
+    </div>
   </div>
     
   <div id="modal1" class="modal">
     <div class="modal-content">
       <span class="close">&times;</span>
+      <img src="./image/炒飯.jpg" alt="Dish 1">
       <p>料理1の詳細情報です。</p>
     </div>
   </div>
   <div id="modal2" class="modal">
     <div class="modal-content">
       <span class="close">&times;</span>
+      <img src="./image/餃子.jpg" alt="Dish 2">
       <p>料理2の詳細情報です。</p>
     </div>
   </div>
   <div id="modal3" class="modal">
     <div class="modal-content">
       <span class="close">&times;</span>
+      <img src="./image/麻婆豆腐.jpg" alt="Dish 3">
       <p>料理3の詳細情報です。</p>
     </div>
   </div>
+  <div id="modal4" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <img src="./image/担々麵.jpg" alt="Dish 4">
+      <p>料理4の詳細情報です。</p>
+    </div>
+  </div>
+  <div id="modal5" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <img src="./image/青椒肉絲.jpg" alt="Dish 5">
+      <p>料理5の詳細情報です。</p>
+    </div>
+  </div>
+  <div id="modal6" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <img src="./image/杏仁豆腐.jpg" alt="Dish 6">
+      <p>料理6の詳細情報です。</p>
+    </div>
+  </div>
+
+  <div id="modal7" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <img src="./image/chuka_chef.png" alt="Dish 6">
+      <p>いかがでしたか？</p>
+    </div>
+  </div>
+
   <script src="./script.js"></script>
-  </body>
+</body>
 </html>
